# TextovaHra

./: .gitignore  CMakeLists.txt  README.md  run.sh  test.sh
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CPM.cmake
src/: Game.cpp  Game.hpp  Item.cpp  Item.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  main.cpp
src/Achievements/: Achievement.cpp  Achievement.hpp
src/Items/: Cursor.hpp  Factory.hpp  Farm.hpp  FingerUpgrades.hpp  Grandma.hpp  Item.cpp  Item.hpp  ReinforcedFinger.hpp  SpeedGem.hpp  Speedgem.cpp  Sword.cpp  Sword.hpp  portal.hpp
src/Tests/: ItemTest.cpp
